# fast-staged

./: .fast-staged.toml  .gitignore  Cargo.toml  README.md  ROADMAP.md  TODO.md  config.toml  package.json
.cargo/: config.toml
.github/workflows/: CI.yml
crates/fast-staged/: Cargo.toml
crates/fast-staged/src/: app.rs  command.rs  config.rs  error.rs  event.rs  file.rs  lib.rs  main.rs  model.rs  render.rs  task.rs
src/: lib.rs  main.rs
