[package]
name = "fast-staged"
version = "0.1.0"
edition = "2024"
authors = ["Nikolay Kost <jilizart@gmail.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
gix = "0.74.1"
ratatui = "0.29"
crossterm = "0.29"
fast-glob = "1.0"
anyhow = "1.0.99"
parse_duration="2.1.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.⏎