[workspace]
members = [
  "crates/*",
  "packages/*"
]
resolver = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z"  # Optimize for size.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.⏎
