cargo-features = ["edition2024"]

[package]
name = "fast_staged"
version = "0.1.0"
edition = "2024"
authors = ["Nikolay Kost <jilizart@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
napi-build = "2"

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

tokio = { version = "1.0", features = ["full"] }
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gix = "0.75.0"
ratatui = "0.29"
crossterm = "0.29"
fast-glob = "1.0"
anyhow = "1.0.99"
parse_duration="2.1.1"
thiserror = "2.0.17"
which = "8.0.0"
