cargo-features = ["edition2024"]

[package]
name = "fast_staged"
version = "0.1.0"
edition = "2024"
authors = ["Nikolay Kost <jilizart@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
napi-build = "2"

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
color-eyre = "0.6.5"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gix = "0.77.0"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
fast-glob = "1.0"
anyhow = "1.0.99"
parse_duration="2.1.0"
thiserror = "2.0.17"
which = "8.0.0"
